tests/rosetta/out/Rust/call-a-function-6.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:51Z
fn main() {
    fn bar(a: i32, b: i32, c: i32) -> () {
        println!("{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", a.to_string(), ", "), b.to_string()), ", "), c.to_string()));
    }
    fn main() -> () {
        let mut args: std::collections::HashMap<&'static str, i32> = { let mut m = std::collections::BTreeMap::new(); m };
        args.insert("a", 3);
        args.insert("b", 2);
        args.insert("c", 1);
        bar(args[&"a"], args[&"b"], args[&"c"]);
    }
    main();
}
